--- a/PerfilFront/estilo.css
+++ b/PerfilFront/estilo.css
@@ -1,4 +1,5 @@
 /* Agregamos la fuente a utilizar en la página */
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap');
 *{
     margin: 0;
@@ -7,13 +8,13 @@
     font-family: 'Montserrat';
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-#inicio{
-    background: linear-gradient(rgba(0,0,0,7), rgba(0,0,0,7)), url("imagen_fondo_1.jpg");
+#inicio {
+    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url("imagen_fondo_1.jpg");
     background-size: cover;
     background-position: center center;
-    /* height: 100vh; */
+    height: 100vh;
 }
