--- a/PerfilFront/estilo.css
+++ b/PerfilFront/estilo.css
@@ -134,3 +134,24 @@ html {
     display: none;
 }
 
+/* seccion sobre mi */
+
+#sobremi{
+    max-width: 1100px;
+    margin: auto;
+    padding: 100px 15px;
+    color: #111135;
+    display: flex;
+}
+
+#sobremi .contenedor-foto{
+    max-width: 400px;
+    margin-right: 80px;
+}
+
+#sobremi .contenedor-foto img{
+    padding: 20px;
+    width: 100%;
+    border-radius: 20px;
+    background-color: #f3f3f3;
+}
