--- a/PerfilFront/estilo.css
+++ b/PerfilFront/estilo.css
@@ -163,7 +163,7 @@ html {
 #sobremi .sobremi .titulo-seccion{
     font-size: 22px;
     text-transform: uppercase;
-    color: #111135
+    color: #111135;
     text-decoration: underline;
     text-decoration-color: #d3d3d3;
     text-decoration-thickness: 5px;
@@ -222,7 +222,7 @@ html {
 #servicios .titulo-seccion{
     font-size: 22px;
     text-transform: uppercase;
-    color: #111135
+    color: #111135;
     text-decoration: underline;
     text-decoration-color: #d3d3d3;
     text-decoration-thickness: 5px;
@@ -393,10 +393,49 @@ html {
 }
 
 #portafolio .titulo-seccion{
+    text-align: center;
     font-size: 22px;
     text-transform: uppercase;
-    color: #111135
+    color: #111135;
     text-decoration: underline;
     text-decoration-color: #d3d3d3;
     text-decoration-thickness: 5px;
+}
+#portafolio .fila{
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 0;
+}
+#portafolio .fila .proyecto{
+    max-width: 450px;
+    border: 1px solid #000;
+    margin: 0 10px;
+    position: relative;
+    overflow: hidden;
+}
+#portafolio .fila .proyecto img{
+    width: 100%;
+    height: 100%;
+    filter: grayscale(1);
+    object-fit: cover;
+    transition: .5s;
+}
+#portafolio .fila .proyecto:hover img{
+    filter: grayscale(0);
+}
+#portafolio .fila .proyecto .info{
+    position: absolute;
+    left: 0;
+    background-color: rgba(0,0,0, .8);
+    color: rgb(38, 178, 7);
+    width: 100%;
+    padding: 10px;
+    opacity: 0;
+    bottom: -40px;
+    transition: .5s;
+}
+
+#portafolio .fila .proyecto:hover .info{
+    opacity: 1;
+    bottom: 0;
 }
